[tool.poetry]
name = "geneweaver-core"
version = "0.9.0a2"
description = "The core of the Jax-Geneweaver Python library"
authors = ["Jax Computational Sciences <cssc@jax.org>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/TheJacksonLaboratory/geneweaver-client"
homepage = "https://thejacksonlaboratory.github.io/geneweaver-docs/"
packages = [
    { include = "geneweaver/core", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = { extras = ["dotenv"], version = "^1.10.7" }
openpyxl = "^3.1.2"
numpy = ">=1.22,<1.24"
pandas = ">=1.5,<2.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
pytest = "^7.1.3"
pydocstyle = "^6.1.1"
requests = "^2.28.1"
pytest-cov = "^4.0.0"
geneweaver-testing = "^0.0.2"

[tool.ruff]
select = ['F', 'E', 'W', 'A', 'C90', 'N', 'B', 'ANN', 'D', 'I', 'ERA', 'PD', 'NPY', 'PT']

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN001", "ANN201"]
"src/*" = ["ANN101"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
